Adaptation contrast correction des conséquences

--- a/style.css
+++ b/style.css
@@ -778,6 +778,10 @@ h4 {
     color: #FFF!important;
 }
 
+#orange{
+    color: #f3976c !important;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #FFFFFF!important;
